fixed spacing

--- a/scoot/styles/base.css
+++ b/scoot/styles/base.css
@@ -11,7 +11,8 @@
 
 /*Used on all pages */
 
-html, body {
+html,
+body {
     color: var(--text-color);
     background-color: var(--secondary-color);
 }
@@ -119,12 +120,33 @@ a:hover {
     object-fit: contain;
 }
 
+.vehicle-card>* {
+    text-align: center;
+}
+
+.vehicle-card h4 {
+    text-decoration: underline;
+    margin: 0;
+}
+
+.vehicle-card ul {
+    display: inline-block;
+    text-align: left;
+    margin: 0;
+}
+
+.vehicle-card li {
+    margin: 5px 0 5px 0;
+}
+
 #current-weather,
 .forecast-card,
 #review-1,
 #review-2,
 #review-3,
-#review-4, .vehicle-card, #reservations h2 {
+#review-4,
+.vehicle-card,
+#reservations h2 {
     box-shadow: 0 4px 8px 0;
     border: 2px solid var(--border-color);
     border-radius: 10px;
@@ -133,14 +155,22 @@ a:hover {
 }
 
 @keyframes flash {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
-  }
+    0% {
+        opacity: 1;
+    }
 
-  .flash{
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.flash {
     animation: flash 2s infinite;
-  }
+}
 
 /* end use all */
 
